# kubernetes_traefik_fastapi

./: .env  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  README.md  alembic.ini  cleanup.sh  pyproject.toml  requirements.txt
api/: .env  alembic.ini  compose.yaml  pyproject.toml  requirements.txt
api/backend/: configs.py  main.py
api/backend/dependencies/: auth.py
api/backend/migrations/: env.py
api/backend/migrations/versions/: e1a5fa61e275_.py
api/backend/models/: base.py  users.py
api/backend/pydantic/: auth.py  users.py
api/backend/routers/: auth.py  users.py
api/backend/worker/: tasks.py
kubernetes/: values.yaml
kubernetes/api/: api.yaml  deployment.yaml  replica.yaml  service.yaml
kubernetes/hyperion/: Chart.yaml  configmap.yaml  values.yaml
kubernetes/hyperion/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  worker-deployment.yaml
kubernetes/hyperion/templates/tests/: test-connection.yaml
kubernetes/postgres/: Chart.yaml  postgres-config.yaml  postgres-service.yaml  postgres.yaml  secrets.yaml  values.yaml
kubernetes/postgres/templates/: deployment.yaml  service.yaml  statefulset.yaml
kubernetes/redis/: values.yaml
kubernetes/traefik/: ingress.yaml  service.yaml  traefik.yaml  values.yaml
mychart/: Chart.yaml
mychart/templates/: configmap.yaml
